<?xml version="1.0" encoding="utf-8"?>

<!-- 'Universal' and fallback Strings -->

<resources>
    <string name="app_name">think</string>
    <string name="separator"> - </string>
    
    <string name="message_actual_update">Every 1 hr</string>
    <string name="message_light">Light</string>
    <string name="message_dark">Dark</string>
    
    <string name="message_blue">Blue</string>
    <string name="message_green">Green</string>
    <string name="message_red">Red</string>
    <string name="message_purple">Purple</string>
    <string name="message_yellow">Yellow</string>
    <string name="message_orange">Orange</string>
    <string name="message_transparent">Transparent</string>
    
    <string name="recents">Recents 2</string>
    <string name="favorites">Favorites</string>
    <string name="authors">Authors</string>
    <string name="categories">Categories</string>
    <string name="quote">Quote</string>
    <string name="configurations">Configurations</string>
    <string name="about">About</string>
    <string name="search_hint">Search for quotes and authors</string>
    
    <string name="changing_quote_color">Changing the Quote Colors</string>
    <string name="changing_update_time">Changing time between updates</string>
    <string name="changing_theme">Changing the App Theme</string>
    
    <string name="all_quotes">All Quotes</string>
    <string name="only_new_quotes">Only New Quotes</string>
    <string name="cancel">Cancel</string>
    
    <string name="button_share_description">Share this quote</string>
    <string name="button_favorite_description">Favorite this quote</string>
    <string name="button_unfavorite_description">Unfavorite this quote</string>
    
    <string name="image_quote_description">Quote mark</string>
    <string name="image_category_description">Category</string>
    <string name="image_reference_description">Reference</string>
    <string name="image_author_description">Author</string>
    <string name="image_think_description">Think</string>
    
    
    <string name="menu_settings">Settings</string>
    <string name="menu_search">Search</string>
    <string name="menu_share">Share</string>
    <string name="menu_favorite">Favorite</string>
    <string name="menu_unfavorite">Unfavorite</string>
    
    <string name="menu_new">New Quote</string>
    <string name="menu_random">Random Quote</string>
    <string name="menu_refresh">Refresh</string>
    
    <string name="text_share_subject">Think quote</string>
    <string name="text_share_title">Share</string>
    
    <string name="text_configuration_update">Updates</string>
    <string name="switch_configuration_automatic_updates">Automatic Updates</string>
    <string name="text_configuration_updates">Update time</string>
    <string name="text_configuration_theme">Theme</string>
    <string name="text_configuration_themes">Change Theme</string>
    <string name="text_configuration_colorquotes">Change Color Quote</string>
    <string name="text_configuration_about">About</string>
    <string name="text_configuration_policy">Privacy Policy</string>
    <string name="text_configuration_about_think">About think</string>
    <string name="text_configuration_version">Version 0.0.1-SNAPSHOT</string>
    
    <string name="text_about_about">Think is a mobile application for sharing and receiving thousands of interesting quotes from great thinkers, literature, film and games. You can organize your favorite quotes and share them with your friends on social networks. The quotes have their sources verified, preventing fake (or misattributed) quotes from being added. Think is available in different plataforms and languages.</string>
    <string name="text_about_team">team</string>
    <string name="text_about_rafael">Rafael Rabelo Itajubá</string>
    <string name="text_about_rafael_details">Developer</string>
    <string name="text_about_lais">Lais Munhoz Mastelari</string>
    <string name="text_about_lais_details">Designer</string>
    <string name="text_about_greetings_title">greetings</string>
    <string name="text_about_greetings">This app is made for her, who loves android more than I do.</string>
    
    <string name="text_error_no_quotes">Sorry, you don\'t have any quotes here.</string>
    <string name="text_error_no_fav_quotes">You don\'t have any quote in your favorites.</string>
    
    <string-array name="array_string_update_time">
        <item >1</item>
        <item >3</item>
        <item >6</item>
        <item >12</item>
        <item >24</item>
    </string-array>
    
</resources>
