<menu xmlns:android="http://schemas.android.com/apk/res/android" >
	
	<item android:id="@+id/menu_search"
          android:title="@string/menu_search"
          android:icon="?attr/searchButtonSrc"
          android:showAsAction="always|collapseActionView"
          android:actionViewClass="android.widget.SearchView" />
    
    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_settings"
        android:icon="?attr/settingsButtonSrc" />

    
    <item
        android:id="@+id/menu_refresh"
        android:showAsAction="never"
        android:title="@string/menu_refresh" />
    
    <item
        android:id="@+id/menu_new"
        android:showAsAction="never"
        android:title="@string/menu_new" />
    
    <item
        android:id="@+id/menu_random"
        android:showAsAction="never"
        android:title="@string/menu_random" />
   
</menu>