<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AboutActivity_"  >

	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center_horizontal"
	    android:orientation="vertical" 
	    android:padding="10dp">
	    
	    <TextView  
	        android:id="@+id/text_about_title"
		    android:layout_marginTop="10dp"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content" 
		    android:text="@string/app_name" 
		    android:drawableLeft="@drawable/ic_logo" 
		    android:padding="5dp" 
		    android:paddingTop="8dp" 
		    android:textColor="@color/main_think"
		    android:textSize="40sp"/>
	    
	    <TextView 
		    android:layout_width="match_parent"
		    android:layout_height="match_parent" 
		    android:text="@string/text_about_about" />

	    <TextView
	        android:id="@+id/text_about_team"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/text_about_team" 
		    android:textColor="@color/main_think"
		    android:textSize="40sp"
		    android:layout_marginTop="15dp"/>

	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/text_about_rafael"
		    android:layout_marginTop="10dp" />

	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
		    android:textSize="12sp"
	        android:text="@string/text_about_rafael_details" />

	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/text_about_lais"
		    android:layout_marginTop="10dp" />

	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
		    android:textSize="12sp"
	        android:text="@string/text_about_lais_details" />

	    <TextView
	        android:id="@+id/text_about_greetings"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/text_about_greetings_title" 
		    android:textColor="@color/main_think"
		    android:textSize="40sp"
		    android:layout_marginTop="15dp"/>

	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/text_about_greetings" />
	    
	</LinearLayout>
</ScrollView>

