<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_widget"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    
	<RelativeLayout
    android:id="@+id/layout_quote_item"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:visibility="visible"
	    android:padding="5dp" >
	
	    <ImageView
	        android:id="@+id/image_quote_left_mark"
	        android:layout_width="12dp"
	        android:layout_height="12dp"
	        android:layout_alignParentTop="true"
	        android:layout_alignParentLeft="true"
	        android:contentDescription="@string/image_quote_description"
	        android:src="@drawable/quote_mark_left_light" />
	    
	    <TextView
	        android:id="@+id/text_quote_preview"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="3dp"
	        android:layout_toRightOf="@+id/image_quote_left_mark"
	        android:ellipsize="end"
	        android:maxLines="2"
	        android:textIsSelectable="false"
	        android:textSize="12sp" />
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/text_quote_preview"
	        android:layout_alignParentBottom="true"
	        
	        android:baselineAligned="false"
	        android:gravity="right|center_vertical"
	        android:orientation="vertical" >
	
	        <ImageView
	            android:id="@+id/text_author_fullName"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:contentDescription="@string/image_author_description" />
	
	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:gravity="right" >
	
	            <ImageView
	                android:id="@+id/text_reference_description"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	            android:contentDescription="@string/image_reference_description" />
	
	            <ImageView
	                android:id="@+id/text_category_description"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	            android:contentDescription="@string/image_category_description" />
	            
	        </LinearLayout>
	    </LinearLayout>
	</RelativeLayout>

	<TextView
	    android:id="@+id/text_error_widget" 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_margin="10dp"
	    android:visibility="gone"
	    android:gravity="center"
	    android:text="@string/text_error_no_quotes"/>
	
</LinearLayout>