<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="3dp"
    android:paddingBottom="3dp"
    android:paddingRight="10dp"
    android:paddingLeft="16dp"
    android:background="?android:attr/activatedBackgroundIndicator"
    tools:context=".MainActivity_">
    
	<LinearLayout
        android:id="@+id/layout_quote_item"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:padding="5dp"
	    android:orientation="vertical"
	    android:baselineAligned="false">
	        
	    <ImageView
	        android:id="@+id/image_quote_left_mark"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:contentDescription="@string/image_quote_description"
	        android:src="@drawable/quote_mark_left_light"/>
	
	    <TextView
	        android:id="@+id/text_quote_preview"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
		    android:textSize="16sp"
	        android:layout_marginLeft="12dp"
	        android:layout_marginRight="12dp"
        	android:ellipsize="end"
	        android:maxLines="3"
	        android:textIsSelectable="false" />
    
	    
		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="3dp"
		    android:orientation="vertical"
		    android:gravity="right" 
		    android:baselineAligned="false">
	    
		    <TextView
		        android:id="@+id/text_author_fullName"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
			    android:textSize="12sp"
		        android:maxLines="1"
		        android:textIsSelectable="false" />
		    
			<LinearLayout android:gravity="right"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content">
			    
			    <TextView
				    android:id="@+id/text_reference_description"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:textSize="12sp"
					android:maxLines="1" 
        			android:ellipsize="end"
				    android:textIsSelectable="false"/>
			    
			    <TextView
				    android:id="@+id/text_category_description"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:textSize="12sp"
					android:maxLines="1"
        			android:ellipsize="end"
				    android:textIsSelectable="false"/>
			    
			    
			</LinearLayout>
		</LinearLayout>
		
		
	</LinearLayout>
	
	<LinearLayout 
		android:id="@+id/layout_options_container"
		android:gravity="right"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content">
	    	    		    
	    <ImageButton
		    android:id="@+id/button_favorite"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:focusable="false"
			android:background="@android:color/transparent"
			android:padding ="10dp"
	        android:contentDescription="@string/button_favorite_description" />
	    
	    <ImageButton
	        android:id="@+id/button_share"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
		    android:focusable="false"
			android:background="@android:color/transparent"
			android:padding ="10dp"
	        android:contentDescription="@string/button_share_description" />
	</LinearLayout>
</LinearLayout>